// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/core/collapsible-sidebar/__tests__/CollapsibleSidebarMenuItem matches snapshot 1`] = `
<CollapsibleSidebarMenuItem
  className="foo"
  icon="bold"
  text="bar"
>
  <Tooltip
    className="bdl-CollapsibleSidebar-menuItemToolTip"
    constrainToScrollParent={false}
    constrainToWindow={true}
    isDisabled={true}
    isTabbable={false}
    position="middle-right"
    text="bar"
    theme="default"
  >
    <styled.div
      className="bdl-CollapsibleSidebar-menuItem foo"
    >
      <div
        className="sc-AykKC jjvVRM bdl-CollapsibleSidebar-menuItem foo"
      >
        <styled.span
          className="bdl-CollapsibleSidebar-menuItemIcon"
        >
          <span
            className="sc-AykKD ejufRx bdl-CollapsibleSidebar-menuItemIcon"
          >
            bold
          </span>
        </styled.span>
        <styled.span
          className="bdl-CollapsibleSidebar-menuItemLabel"
        >
          <span
            className="sc-AykKE imqeeq bdl-CollapsibleSidebar-menuItemLabel"
          >
            bar
          </span>
        </styled.span>
      </div>
    </styled.div>
  </Tooltip>
</CollapsibleSidebarMenuItem>
`;

exports[`components/core/collapsible-sidebar/__tests__/CollapsibleSidebarMenuItem should show custom content when content is passed but not the text 1`] = `
<CollapsibleSidebarMenuItem
  className="foo"
  content={
    <div>
      Custom Content
    </div>
  }
  icon="bold"
>
  <Tooltip
    className="bdl-CollapsibleSidebar-menuItemToolTip"
    constrainToScrollParent={false}
    constrainToWindow={true}
    isDisabled={true}
    isTabbable={false}
    position="middle-right"
    theme="default"
  >
    <styled.div
      className="bdl-CollapsibleSidebar-menuItem foo"
    >
      <div
        className="sc-AykKC jjvVRM bdl-CollapsibleSidebar-menuItem foo"
      >
        <styled.span
          className="bdl-CollapsibleSidebar-menuItemIcon"
        >
          <span
            className="sc-AykKD ejufRx bdl-CollapsibleSidebar-menuItemIcon"
          >
            bold
          </span>
        </styled.span>
        <div>
          Custom Content
        </div>
      </div>
    </styled.div>
  </Tooltip>
</CollapsibleSidebarMenuItem>
`;

exports[`components/core/collapsible-sidebar/__tests__/CollapsibleSidebarMenuItem should show just text when text and content is passed 1`] = `
<CollapsibleSidebarMenuItem
  className="foo"
  content={
    <div>
      Custom Content
    </div>
  }
  icon="bold"
  text="bar"
>
  <Tooltip
    className="bdl-CollapsibleSidebar-menuItemToolTip"
    constrainToScrollParent={false}
    constrainToWindow={true}
    isDisabled={true}
    isTabbable={false}
    position="middle-right"
    text="bar"
    theme="default"
  >
    <styled.div
      className="bdl-CollapsibleSidebar-menuItem foo"
    >
      <div
        className="sc-AykKC jjvVRM bdl-CollapsibleSidebar-menuItem foo"
      >
        <styled.span
          className="bdl-CollapsibleSidebar-menuItemIcon"
        >
          <span
            className="sc-AykKD ejufRx bdl-CollapsibleSidebar-menuItemIcon"
          >
            bold
          </span>
        </styled.span>
        <styled.span
          className="bdl-CollapsibleSidebar-menuItemLabel"
        >
          <span
            className="sc-AykKE imqeeq bdl-CollapsibleSidebar-menuItemLabel"
          >
            bar
          </span>
        </styled.span>
      </div>
    </styled.div>
  </Tooltip>
</CollapsibleSidebarMenuItem>
`;
